--- a/.github/workflows/update_DNS-filter.yml
+++ b/.github/workflows/update_DNS-filter.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Show python version
       run: python3 --version
     - name: Run a script
-      run: python3 update-rule.py
+      run: python3 get_update-filters.py
     - name: Commit changes
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
