--- a/.github/workflows/update_DNS-filter.yml
+++ b/.github/workflows/update_DNS-filter.yml
@@ -19,7 +19,7 @@ jobs:
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
-        git commit -a -m "Automatic update dns-filter.txt"
+        git commit -a -m "Automatic update-filter.txt"
     - name: Push changes
       run: |
         git push -u origin main
