--- a/.github/workflows/update_domain-filter.yml
+++ b/.github/workflows/update_domain-filter.yml
@@ -2,7 +2,7 @@ name: Update domain-filter.yml
 
 on:
   schedule:
-    - cron:  '10 1 * * *'
+    - cron:  '0 1 */2 * *' # update setiap 2 hari sekali
   workflow_dispatch:
 
 jobs:
